Show movies on selected date. Fix overflow of seats on mobile view

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -40,3 +40,15 @@
     width: 50%;
   }
 }
+
+.days {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 5px;
+
+  button {
+    margin-right: 3px;
+    margin-top: 3px;
+  }
+}
